version/0.18/_sources/api/solver/_autosummary/settings/rotor.rst.txt
:orphan:

.. _rotor:

rotor
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.rotor.rotor
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`rotor_child <rotor_child>`


.. rubric:: Included in:

================================================   =============================

Parent                                                                   Summary

================================================   =============================
:ref:`virtual_blade_model <virtual_blade_model>`       Enter the vbm model menu.

================================================   =============================

