version/0.20/_sources/api/solver/_autosummary/settings/rotor.rst.txt
:orphan:

.. _rotor:

rotor
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.rotor.rotor
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`rotor_child <rotor_child>`


.. rubric:: Included in:

================================================   =============================

Parent                                                                   Summary

================================================   =============================
:ref:`virtual_blade_model <virtual_blade_model>`       Enter the vbm model menu.

================================================   =============================

